<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- APP -->
    <string name="application_name">Minesweeper</string>

    <!-- NAV DRAWER -->
    <string name="nav_play">Play</string>
    <string name="nav_leaderboards">Leaderboards</string>
    <string name="nav_achievements">Achievements</string>
    <string name="nav_stats">Statistics</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="nav_info">Info</string>

    <!-- MENU -->
    <string name="menu_restart">New game</string>
    <string name="menu_flag">Flag mode</string>
    <string name="menu_wipe">Wipe statistics</string>

    <!-- DIALOG -->
    <string name="enter_custom_value">Enter value</string>
    <!-- CANCEL RESUME -->
    <string name="dialog_cancel_resume_title">Create a new game?</string>
    <string name="dialog_cancel_resume_message">There is an unfinished game that could count as a loss, do you still wish to start a new game?</string>
    <!-- HELP -->
    <string name="how_to_play_title">How to play</string>
    <string name="how_to_play_label">Minesweeper is a puzzle game in which the player must uncover all the cells that aren\'t mines without uncovering a mine cell. Cells can either be mines or the amount of mines in the 8 neighboring cells near them. The player can deduce from the non-mine cells where the mines could be at. Players can place a flag on a cell that they think is a mine.</string>
    <string name="controls_title">Controls</string>
    <string name="controls_label">"Normal:
 • Tap a cell to reveal it
 • Tap and hold a cell to flag it
 • Tap a numbered cell that has that many flags near it to clear near unflagged cells ( Swift Open )
 • Tap a empty cell to change your control mode swiftly ( Swift Change )

Flag:
 • Tap a cell to flag it
 • Tap and hold a cell to reveal it
 • Tap a numbered cell that has that many flags near it to clear near unflagged cells ( Swift Open )
 • Tap a empty cell to change your control mode swiftly ( Swift Change )"
    </string>
    <string name="scores_title">Scores</string>
    <string name="scores_label">The scores are based on 3BV per second, which 3BV is a way to measure the difficulty of a Minesweeper board based off of the amount of clicks it would take to solve the board.</string>
    <string name="support_title">Support</string>
    <string name="support_label">Please email the developer at drew.romanyk@gmail.com for any concerns or feedback.</string>
    <!-- ABOUT -->
    <string name="about_title">About</string>
    <string name="about_label">The classic game of Minesweeper is here for Android. Use strategy and critical thinking to win. The goal is to reveal all cells that aren\'t mines. Minesweeper is also known as Mines.\n\nVersion: {amount}</string>
    <!-- CUSTOM GAME ERROR -->
    <string name="dialog_custom_game_error_title">Custom game settings error</string>
    <string name="dialog_custom_game_error_message">The amount of bombs you selected aren\'t valid for the amount of cells in the game.</string>
    <!-- TRASH STATS -->
    <string name="dialog_trash_stats_title">Wipe all statistics?</string>
    <string name="dialog_trash_stats_message">You will not be able to restore your statistics, are you sure you want to continue?</string>

    <!-- GAME ACTIVITY-->
    <!-- GAME DIFFICULTY -->
    <string name="game_difficulty_resume">Resume</string>
    <string name="game_difficulty_resume_details">Continue previous game</string>
    <string name="game_difficulty_easy">Easy</string>
    <string name="game_difficulty_easy_details">9 x 9\n10 Mines</string>
    <string name="game_difficulty_medium">Medium</string>
    <string name="game_difficulty_medium_details">16 x 16\n40 Mines</string>
    <string name="game_difficulty_expert">Expert</string>
    <string name="game_difficulty_expert_details">30 x 16\n99 Mines</string>
    <string name="game_difficulty_custom">Custom</string>
    <string name="game_difficulty_custom_details">Custom settings</string>
    <!-- GAME BAR -->
    <string name="game_bar_time_title">Time: {amount}</string>
    <string name="game_bar_score_title">Score: {amount}</string>
    <string name="game_bar_mine_title">Mines: {amount}</string>
    <string name="game_best_time">NEW BEST TIME!</string>
    <string name="game_best_score">NEW BEST SCORE!</string>

    <!-- STATS FRAGMENT -->
    <string name="stats_title_best_score">Best score: {amount}</string>
    <string name="stats_title_best_time">Best time: {amount}</string>
    <string name="stats_title_avg_score">Average score: {amount}</string>
    <string name="stats_title_avg_time">Average time: {amount}</string>
    <string name="stats_title_games_won">Games won: {amount}</string>
    <string name="stats_title_games_played">Games played: {amount}</string>
    <string name="stats_title_win_percent">Win percent: {amount}</string>
    <string name="stats_title_explore_percent">Explore percent: {amount}</string>
    <string name="stats_title_win_streak">Win streak: {amount}</string>
    <string name="stats_title_lose_streak">Lose streak: {amount}</string>
    <string name="stats_title_current_streak">Current streak: {amount}</string>

    <!-- GOOGLE GAMES -->
    <string name="sign_in_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="google_play_error">Google Play service error.</string>

    <!-- PREFERENCES -->
    <string name="preference_cellsize" translatable="false">cellSize_seek</string>
    <string name="preference_rowcount" translatable="false">row_seek</string>
    <string name="preference_columncount" translatable="false">column_seek</string>
    <string name="preference_minecount" translatable="false">mine_seek</string>
    <string name="preference_vibration" translatable="false">vibration_check</string>
    <string name="preference_vibration_duration" translatable="false">vibration_duration</string>
    <string name="preference_sound" translatable="false">sound_check</string>
    <string name="preference_swiftopen" translatable="false">swiftopen_check</string>
    <string name="preference_swiftchange" translatable="false">swiftchange_check</string>
    <string name="preference_volumebutton" translatable="false">volumebutton_check</string>
    <string name="preference_screenon" translatable="false">screenon_check</string>
    <string name="preference_lockrotate" translatable="false">lockrotate_check</string>
    <string name="preference_ui_theme_mode" translatable="false">ui_theme_mode</string>
    <string name="preference_longclick_duration" translatable="false">longclick_duration_seek</string>
    <string name="preference_animation" translatable="false">animation_check</string>
    <string name="preference_info_bar_visibility" translatable="false">info_bar_visibility_check</string>
    <string name="preference_saved_current_version" translatable="false">1</string>

    <!-- SETTINGS -->
    <string name="settings_in_app">In-app purchases</string>
    <string name="settings_cell">Cell button settings</string>
    <string name="settings_cell_size">Cell size</string>
    <string name="settings_custom">Custom game settings</string>
    <string name="settings_custom_rows">Rows</string>
    <string name="settings_custom_columns">Columns</string>
    <string name="settings_custom_mines">Mines</string>

    <string name="settings_game">Game settings</string>
    <string name="settings_game_ui_theme">UI theme mode</string>
    <string name="settings_game_sound">Sound effects</string>
    <string name="settings_game_vibration">Vibration</string>
    <string name="settings_game_screenon">Keep screen on</string>
    <string name="settings_game_rotate">Lock rotation</string>
    <string name="settings_game_volumeflag">Volume button flag mode</string>
    <string name="settings_game_swiftchange">Swift change</string>
    <string name="settings_game_swiftopen">Swift open</string>
    <string name="settings_game_longclick_duration">Long click duration</string>
    <string name="settings_game_vibration_duration">Vibrate duration</string>
    <string name="settings_game_animation">Animation</string>
    <string name="settings_game_info_bar_visibility">Info bar visibility</string>

    <string name="settings_support">Support</string>
    <string name="settings_feedback_subject">Minesweeper: Feedback</string>
    <string name="settings_feedback_chooser">Send feedback email…</string>
    <string name="settings_feedback_error">There are no email clients installed.</string>
    <string name="reset_statistics">Reset statistics</string>

    <!-- IN APP RATING -->
    <string name="in_app_rating_enjoy">Enjoying Minesweeper?</string>
    <string name="in_app_rating_enjoy_no">Not really</string>
    <string name="in_app_rating_enjoy_yes">Yes!</string>
    <string name="in_app_rating_feedback">Would you mind giving us some feedback?</string>
    <string name="in_app_rating_rating">How about a rating on the Play Store, then?</string>
    <string name="in_app_rating_secondary_no">No, thanks</string>
    <string name="in_app_rating_secondary_yes">OK, sure</string>

    <!-- NEED SORTED OUT -->
    <string name="open_source_licenses">Open source licenses</string>
    <string name="send_feedback">Send feedback</string>
    <string name="remove_ads">Remove ads</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="sign_in">Sign in</string>

</resources>