<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_nav_play"
            android:title="@string/nav_play" />
        <item
            android:id="@+id/nav_leaderboards"
            android:icon="@drawable/ic_nav_leaderboards"
            android:title="@string/nav_leaderboards" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_nav_achievements"
            android:title="@string/nav_achievements" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_nav_stats"
            android:title="@string/nav_stats" />
    </group>
    <group android:id="@+id/group_other">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_nav_help"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_about" />
    </group>
</menu>