<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.HelpFragment"
>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
   >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacer"
            android:layout_marginTop="@dimen/spacer"
            android:text="@string/how_to_play_title"
            android:textAppearance="@style/TextAppearance.Minesweeper.Subhead"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacer"
            android:layout_marginTop="@dimen/spacer"
            android:text="@string/how_to_play_label"
            android:textColor="?android:textColorPrimary"
        />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/spacer"
           android:layout_marginTop="@dimen/spacer"
           android:text="@string/controls_title"
           android:textAppearance="@style/TextAppearance.Minesweeper.Subhead"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/spacer"
           android:layout_marginTop="@dimen/spacer"
           android:layout_marginBottom="@dimen/spacer"
           android:text="@string/controls_label"
           android:textColor="?android:textColorPrimary"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/spacer"
           android:text="@string/scores_title"
           android:textAppearance="@style/TextAppearance.Minesweeper.Subhead"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/spacer"
           android:layout_marginTop="@dimen/spacer"
           android:layout_marginBottom="@dimen/spacer"
           android:text="@string/scores_label"
           android:textColor="?android:textColorPrimary"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/spacer"
           android:text="@string/support_title"
           android:textAppearance="@style/TextAppearance.Minesweeper.Subhead"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/spacer"
           android:layout_marginTop="@dimen/spacer"
           android:layout_marginBottom="@dimen/spacer"
           android:text="@string/support_label"
           android:textColor="?android:textColorPrimary"
           />
   </LinearLayout>
</androidx.core.widget.NestedScrollView>