<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/info_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/timeKeeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingBottom="2dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="6dp"
                android:text="@string/game_bar_time_title"
                android:textColor="@color/material_dark_text" />

            <TextView
                android:id="@+id/scoreKeeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="@string/game_bar_score_title"
                android:textColor="@color/material_dark_text" />

            <TextView
                android:id="@+id/mineKeeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingBottom="6dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="6dp"
                android:text="@string/game_bar_mine_title"
                android:textColor="@color/material_dark_text"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>
</merge>