<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/adFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/ad_id"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/frame"
        android:layout_above="@id/adFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary">

        <TextView
            android:paddingTop="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingBottom="2dp"
            android:id="@+id/timeKeeper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/game_bar_time_title"
            android:textColor="@color/material_dark_text"/>
        <TextView
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/scoreKeeper"
            android:text="@string/game_bar_score_title"
            android:textColor="@color/material_dark_text"/>
        <TextView
            android:paddingTop="6dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="6dp"
            android:id="@+id/mineKeeper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/game_bar_mine_title"
            android:textColor="@color/material_dark_text"/>
    </RelativeLayout>
</merge>