<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/accent">

            <TextView
                android:id="@+id/rating_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/in_app_rating_enjoy"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rating_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/rating_desc"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/in_app_rating_enjoy_yes"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.TextButton"
            />

            <Button
                android:id="@+id/rating_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rating_desc"
                android:layout_toLeftOf="@id/rating_yes"
                android:layout_toStartOf="@id/rating_yes"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/in_app_rating_enjoy_no"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>